# RtkGps

./: .classpath  .cproject  .factorypath  .gitignore  .gitmodules  .project  AndroidManifest.xml  LICENSE.txt  README.md  build.gradle  build.xml  gradle.properties  ic_launcher-web.ai  integrate-crowdin  proguard-annotations.txt  proguard-project.txt  project.properties
assets/: licenses.html
assets/commands/: cres_raw_10hz.cmd  cres_raw_1hz.cmd  javad_raw_10hz.cmd  javad_raw_1hz.cmd  javad_raw_5hz.cmd  lexr_inittime.cmd  nvs_raw_10hz.cmd  nvs_raw_1hz.cmd  oem3_com1setup.cmd  oem3_com2setup.cmd  oem3_raw_10hz.cmd  oem3_raw_1hz.cmd  oem3_rtcm2_10hz.cmd  oem3_rtcm2_1hz.cmd  oem3_rtk_10hz.cmd  oem3_rtk_1hz.cmd  oem4_raw_10hz.cmd  oem4_raw_1hz.cmd  oem4_raw_20hz.cmd  oem4_raw_5hz.cmd  oem4_rtcm2_10hz.cmd  oem4_rtcm2_1hz.cmd  oem4_rtcm3_10hz.cmd  oem4_rtcm3_1hz.cmd  oem4_setcom115200.cmd  oem6_raw_1hz.cmd  sirf_raw_1hz.cmd  skytraq_raw_10hz.cmd  skytraq_raw_1hz.cmd  skytraq_raw_20hz.cmd  skytraq_raw_5hz.cmd  ubx_m8n_glo_uart1_raw_1hz.cmd  ubx_raw_10hz.cmd  ubx_raw_1hz.cmd  ubx_raw_5hz.cmd
assets/ntripcaster/: ntripcaster.conf
assets/proj4/: FL  MD  TN  WI  WO  alaska  conus  hawaii  null  prvi  stgeorge  stlrnc  stpaul
gdal-prebuilt/TOOLS-FORBUILDING/: 00-MAKE-TOOLCHAINS  00-SET_VARS  10-SET-PATH  20-BUILD  ColorTable.java  Readme.md
gdal-prebuilt/TOOLS-FORBUILDING/port/: GNUmakefile  fake_std.c
gdal-prebuilt/arm64-v8a/include/: cpl_config.h
gdal-prebuilt/armeabi-v7a/include/: cpl_config.h
gdal-prebuilt/x86/include/: cpl_config.h
gdal-prebuilt/x86/jni/: gnm_wrap.cpp  osr_wrap.cpp
gdal-prebuilt/x86_64/include/: cpl_config.h  gdal_version.h
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  RTKLIB-raf09.patch  RTKLIB-unixsocket.patch  RTKexplorer-demo5.patch  gdal.mk  gdal_wrap.cpp  gdalconst_wrap.c  gtime.c  log.c  ogr_wrap.cpp  prcopt.c  proj4-jni.patch  rtkcommon.c  rtkjni.c  rtkjni.h  rtklib.mk  rtknaviservice.c  rtkserver.c  solopt.c
jni/ntripcaster/: CHANGES  Makefile.am  Makefile.in  README.txt  acconfig.h  config.h.in  configure  configure.in  mkinstalldirs
jni/ntripcaster/conf/: Makefile.am  Makefile.in  NtripSourcetable.doc  ntripcaster.conf.dist.in  sourcetable.dat.dist
jni/ntripcaster/src/: Makefile.am  Makefile.in  avl.c  avl.h  client.c  client.h  config.h  connection.c  connection.h  definitions.h  log.c  log.h  main.c  main.h  ntrip_string.c  ntrip_string.h  ntripcaster.h  ntripcaster_jni.c  sock.c  sock.h  source.c  source.h  threads.c  threads.h  timer.c  timer.h  utility.c  utility.h
jni/proj-4.8.0/src/: jniproj.c  pj_open_lib.c
jni/proj4/: Makefile.in  README  aclocal.m4  configure
jni/proj4/cmake/: Makefile.in
jni/proj4/jniwrap/: Makefile.in
jni/proj4/man/: Makefile.in
jni/proj4/nad/: Makefile.in  README.NADUS  chenyx06etrs.gsb
jni/proj4/src/: Makefile.in  jniproj.c  org_proj4_PJ.h  pj_init.c  pj_open_lib.c  proj_config.h.in
jni/proj4/test/: Makefile.in
jni/rtklib_2.4.2/: readme.txt
jni/rtklib_2.4.2/src/: convkml.c  convrnx.c  ephemeris.c  ionex.c  lambda.c  options.c  postpos.c  ppp.c  ppp_ar.c  preceph.c  qzslex.c  rcvraw.c  rinex.c  rtcm.c  rtcm3.c  rtcm3e.c  rtkcmn.c  rtklib.h  rtkpos.c  rtksvr.c  sbas.c  stream.c  streamsvr.c  tle.c
jni/rtklib_2.4.2b10/: readme.txt
jni/rtklib_2.4.2b10/src/: convrnx.c  download.c  ephemeris.c  geoid.c  ionex.c  options.c  postpos.c  ppp_ar.c  preceph.c  qzslex.c  rcvraw.c  rinex.c  rtcm.c  rtcm2.c  rtcm3.c  rtcm3e.c  rtkcmn.c  rtklib.h  rtkpos.c  solution.c  stream.c
jni/rtklib_2.4.2b11/: readme.txt
jni/rtklib_2.4.2b11/src/: convrnx.c  ephemeris.c  options.c  pntpos.c  postpos.c  ppp.c  rcvraw.c  rinex.c  rtcm.c  rtcm3.c  rtkcmn.c  rtklib.h  rtkpos_gsi.c  rtksvr.c  solution.c  stec.c  tle.c
jni/rtknavservice_nix/: Makefile  rtknaviservice_nix.c
libs/: osmdroid-android-3.0.10.jar.properties  osmdroid-third-party-3.0.10.jar.properties
res/drawable/: map_point_marker.xml
res/layout/: activity_about.xml  activity_input_stream_settings.xml  activity_main.xml  activity_settings.xml  activity_startup_shutdown_commands.xml  activity_station_position.xml  activity_stream_settings_dialog.xml  activity_tools.xml  fragment_map.xml  fragment_status.xml  include_status_view_widget.xml  navigation_drawer.xml  select_solution_view_item.xml  view_solution.xml  widget_gtime.xml
res/layout-land/: fragment_status.xml
res/menu/: activity_main.xml  fragment_map.xml  fragment_status.xml  gtime_format.xml  input_stream_settings.xml
res/raw/: changelog.txt  google_play_description.txt
res/raw-es/: changelog.txt  google_play_description.txt
res/raw-fr/: changelog.txt  google_play_description.txt
res/raw-pl/: changelog.txt  google_play_description.txt
res/raw-zh-rCN/: changelog.txt  google_play_description.txt
res/values/: attrs.xml  english_only.xml  strings.xml  styles.xml
res/values-de/: strings.xml
res/values-es/: strings.xml
res/values-fr/: strings.xml
res/values-pl/: strings.xml
res/values-zh-rCN/: strings.xml
res/xml/: caster_options.xml  input_stream_settings.xml  input_stream_settings_base.xml  input_stream_settings_correction.xml  input_stream_settings_rover.xml  log_stream_settings.xml  output_gpxtrace_settings.xml  output_stream_settings.xml  preference_headers.xml  processing_options1.xml  settings1.xml  solution_output_settings.xml  stream_bluetooth_settings.xml  stream_file_settings.xml  stream_mobilemapper_settings.xml  stream_ntrip_client_settings.xml  stream_ntrip_server_settings.xml  stream_tcp_client_settings.xml  stream_udp_client_settings.xml  stream_usb_settings.xml  usb_device_filter.xml
src/android/util/: PoGoPin.java
src/gpsplus/ntripcaster/: NTRIPCaster.java
src/gpsplus/rtkgps/: AboutActivity.java  BluetoothToRtklib.java  DemoModeLocation.java  GPXTrace.java  HexString.java  MainActivity.java  MapFragment.java  MobileMapperToRtklib.java  Proj4Converter.java  ResourceProxyImpl.java  RtkGps.java  RtkNaviService.java  RtklibLocalSocketThread.java  SolutionPathOverlay.java  StatusFragment.java  ToolsActivity.java  (+2 more)
(+318 files in other folders)
